config's and controllers added

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 FRONTEND_URL = http://localhost:3000
 MONGODB_URI = mongodb+srv://scorpionstorm7:storm7@bytekart.sk2bs.mongodb.net/?retryWrites=true&w=majority&appName=ByteKart
+RESEND_API = re_bH85catp_7L4Ub7ir7biMpuToNSw6Eg4b
